# wcollier.github.io

./: .git-blame-ignore-revs  .gitignore  Cargo.toml  README.md  binserve.json  flake.nix
.github/: dependabot.yml
.github/workflows/: deploy.yml  test-deploy.yml  update-flake-lock.yml
site-generator-core/: Cargo.toml
site-generator-core/src/: lib.rs
site-generator-derive/: Cargo.toml
site-generator-derive/src/: lib.rs
src/: args.rs  main.rs  navbar_link.rs  page.rs  page_generator.rs  pages.rs  route.rs  site.rs  templates.rs
src/pages/: blog_index.rs  mod.rs
static/: styles.css
