[package]
name = "site-generator"
version = "0.1.0"

[workspace]
members = [
  "site-generator-derive",
]

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
site-generator-derive = { path = "site-generator-derive" }
maud = "0.26.0"
darling = "0.20.8"
syn = "2.0.72"
chrono = "0.4.38"
markdown = "1.0.0-alpha.18"
