[package]
name = "site-generator"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  "site-generator-derive",
]

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
site-generator-derive = { path = "site-generator-derive" }
maud = "0.26.0"
darling = "0.20.8"
syn = "2.0.106"
chrono = "0.4.41"
comrak = { version = "0.18.0", default-features = false, features = ["syntect"] }
fs_extra = "1.3.0"
