[package]
name = "site-generator"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
  "site-generator-derive",
]

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
site-generator-derive = { path = "site-generator-derive" }
maud = "0.27.0"
darling = "0.23.0"
syn = "2.0.117"
chrono = "0.4.44"
comrak = { version = "0.52.0", default-features = false, features = ["syntect"] }
fs_extra = "1.3.0"
