[package]
name = "site-generator-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darling = "0.20.0"
proc-macro2 = "1.0.69"
quote = "1.0.26"
syn = { version = "2.0.38", features = ["full", "parsing", "extra-traits", "derive"] }
